--- a/css/index.css
+++ b/css/index.css
@@ -297,6 +297,9 @@ body{
     display: block;
     padding-left: 0;
 }
+.content-control2-refresh{
+    padding-top: 150px;
+}
 .content-box2{
     width: 95%;
     height: 110px;
@@ -607,6 +610,17 @@ body{
     line-height: 20px;
     right: 10px;
     top:10px;
+}
+.forum-spin{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 28px;
+    width: 100%;
+    height: 70px;
+    top:75px;
+    color: white;
+    position: absolute;
 }
 .forum-title{
     width: 80%;
