--- a/css/index.css
+++ b/css/index.css
@@ -159,7 +159,7 @@ body{
     width: 100%;
     padding-left: 7px;
     padding-right: 7px;
-    line-height: 1.2;
+    line-height:30px;
     height: 30px;
     overflow: hidden;
     color: brown;
