mark gray to black

--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,7 @@ body{
     top:5px;
     left:5px;
     font-size: 26px;
-    color: gray;
+    color: black;
     z-index: 1003;
 }
 .mark:hover{
