--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,15 @@ body{
     padding-left: 10px;
     font-size: 18px;
 }
+.loginInput>.loginP{
+    width: 85%;
+}
+.eye_open{
+    color: gray;
+}
+.eye_open:hover{
+    cursor: pointer;
+}
 .loginBtn{
     height: 50px;
     border: 1px solid skyblue;
