--- a/css/version2.css
+++ b/css/version2.css
@@ -27,9 +27,13 @@
     background-repeat: no-repeat;
     position: relative;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .pl-head-img>img{
-    width: 100%;
+    width: 130px;
+    height: 130px;
 }
 .uploadUserImg{
     width: 100%;
