--- a/css/version2.css
+++ b/css/version2.css
@@ -123,6 +123,7 @@
     height: 50px;
     overflow: hidden;
     border-bottom: 1px solid rgba(255,255,255,0.2);
+    transition-duration: 1s;
 }
 .sr-title{
     width: 100%;
@@ -136,7 +137,7 @@
     position: relative;
 }
 .sr-title-expand{
-    height: auto;
+    height: 285px;
 }
 .sr-title:hover{
     cursor: pointer;
