--- a/css/version2.css
+++ b/css/version2.css
@@ -123,7 +123,7 @@
     height: 50px;
     overflow: hidden;
     border-bottom: 1px solid rgba(255,255,255,0.2);
-    transition-duration: 1s;
+    /*transition-duration: 1s; <- 手機不支援 */
 }
 .sr-title{
     width: 100%;
