--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ body{
     width: 100%;
     height: 100vh;
     margin: 0 auto;
+    position: relative;
 }
 .banner{
     width: 100%;
@@ -26,6 +27,16 @@ body{
     line-height: 1.5;
     font-size: 12px;
     text-align: justify;
+}
+.versionInfo{
+    position: absolute;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    bottom: 30px;
+    color: rgba(0,0,0,0.4);
+    line-height: 1.6;
+    font-size: 15px;
 }
 .login{
     width: 100%;
