--- a/css/index.css
+++ b/css/index.css
@@ -634,22 +634,53 @@ body{
     background-color: rgba(0,0,0,0.7);
 }
 .write{
-    width: 55px;
+    width: 50px;
     height: 55px;
+    margin: 0 auto;
     position: absolute;
     bottom: 5px;
     right: 10px;
     border-radius: 5px;
-    text-align: center;
     line-height: 55px;
     font-size: 20px;
     background-color: rgba(0,0,0,0.6);
     color: white;
+    overflow: hidden;
+    transition: 0.8s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.writePen{
+    line-height: 55px;
+}
+.writeSend{
+    margin-left: 15px;
+    line-height: 55px;
+    display: none !important;
+}
+.write-input{
+    height: 32px;
+    width: 80%;
+    border: 0;
+    background-color: transparent;
+    border-bottom: 1px solid rgba(255,255,255,0.7);
+    color: rgba(255,255,255,0.8);
+    padding-left: 8px;
+    display: none !important;
 }
 .write:hover{
     cursor: pointer;
     background-color: rgba(0,0,0,0.7);
+    width: 355px;
 }
+.write:hover>.writePen{
+    display: none !important;
+}
+.write:hover>.writeSend,.write:hover>.write-input{
+    display: block !important;
+}
+
 .art-date{
     position: absolute;
     font-size: 12px;
