--- a/css/index.css
+++ b/css/index.css
@@ -342,6 +342,9 @@ body{
     display: block;
     padding-left: 0;
 }
+.cc{
+    height: 82vh;
+}
 .content-control2-refresh{
     padding-top: 150px;
 }
@@ -634,11 +637,11 @@ body{
     background-color: rgba(0,0,0,0.7);
 }
 .write{
-    width: 50px;
+    width: 355px;
     height: 55px;
     margin: 0 auto;
     position: absolute;
-    bottom: 5px;
+    bottom: 0px;
     right: 10px;
     border-radius: 5px;
     line-height: 55px;
@@ -657,7 +660,6 @@ body{
 .writeSend{
     margin-left: 15px;
     line-height: 55px;
-    display: none !important;
 }
 .write-input{
     height: 32px;
@@ -667,31 +669,7 @@ body{
     border-bottom: 1px solid rgba(255,255,255,0.7);
     color: rgba(255,255,255,0.8);
     padding-left: 8px;
-    display: none !important;
 }
-.write:hover{
-    cursor: pointer;
-    background-color: rgba(0,0,0,0.7);
-    width: 355px;
-}
-.write:hover>.writePen{
-    display: none !important;
-}
-.write:hover>.writeSend,.write:hover>.write-input{
-    display: block !important;
-}
-.write:active{
-    cursor: pointer;
-    background-color: rgba(0,0,0,0.7);
-    width: 355px;
-}
-.write:active>.writePen{
-    display: none !important;
-}
-.write:active>.writeSend,.write:active>.write-input{
-    display: block !important;
-}
-
 .art-date{
     position: absolute;
     font-size: 12px;
