--- a/css/index.css
+++ b/css/index.css
@@ -341,6 +341,7 @@ body{
     overflow-x: hidden;
     display: block;
     padding-left: 0;
+    padding-top: 90px;
 }
 .cc{
     height: 82vh;
@@ -646,7 +647,7 @@ body{
     border-radius: 5px;
     line-height: 55px;
     font-size: 20px;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(255,255,255,0.15);
     color: white;
     overflow: hidden;
     display: flex;
@@ -660,14 +661,21 @@ body{
     margin-left: 15px;
     line-height: 55px;
 }
+.writeSend:hover{
+    cursor: pointer;
+}
 .write-input{
     height: 32px;
     width: 80%;
     border: 0;
     background-color: transparent;
     border-bottom: 1px solid rgba(255,255,255,0.7);
-    color: rgba(255,255,255,0.8);
-    padding-left: 8px;
+    color: black;
+    padding-left: 9px;
+    border-radius: 0;
+}
+.write-input::placeholder{
+    color: gray;
 }
 .art-date{
     position: absolute;
