--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ body{
 .banner{
     width: 100%;
     height: 130px;
-    background-image: url(../img/NCHU.png);
+    background-image: url(../img/banner.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
